--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ body {
 }
 .top img {
   width: 100%;
-
   height: 100%;
   border-radius: 50%;
 }
@@ -65,7 +64,7 @@ body {
 }
 
 .middle p {
-  font-size: 18px;
+  font-size: 1.1rem;
   color: #ffffffcc;
 }
 
@@ -115,7 +114,7 @@ body {
   color: #ffffffcc;
   text-decoration: none;
   letter-spacing: 3px;
-  font-size: 18px;
+  font-size: 1.1rem;
   padding: 15px 25px;
   display: block;
   cursor: pointer;
@@ -140,7 +139,7 @@ body {
   padding: 125px 70px;
 }
 
-#introduce.appear {
+.content-details.appear {
   opacity: 1;
   z-index: 2;
 }
@@ -189,4 +188,65 @@ body {
 
 .content-details p {
   text-align: justify;
+}
+
+.skils-img img {width: 100%;padding: 20px 50px;transition: 1s;}
+
+.skils-img img:hover {transform: scale(1.2);}
+
+.skils-img {margin-top: 50px;}
+
+.interview-group {overflow: auto;height: 85%;}
+
+ .interview-group p {
+  margin: 0;
+  word-break: break-word;
+  font-size: 1.1rem;
+  color: white;
+}
+.interview-group ul {
+  list-style: none;
+  padding: 0;
+}
+.interview-group ul li {
+  position: relative;
+  padding-left: 30px;
+  margin-top: 5px;
+}
+
+.interview-group .project {
+  margin-top: 15px;
+  margin-bottom: 30px;
+}
+.interview-group .project p {
+  margin-top: 10px;
+  padding-left: 30px;
+}
+.interview-group .project p:nth-child(1) {
+  border-bottom: 2px solid;
+  position: relative;
+}
+.interview-group .project p:nth-child(1)::before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  background: white;
+  position: absolute;
+  top: 22px;
+  left: 0;
+  transform: rotate(45deg);
+}
+
+/*# sourceMappingURL=style.css.map */
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: white
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgb(255, 103, 103);
 }
