--- a/css/animation.css
+++ b/css/animation.css
@@ -24,3 +24,12 @@
     opacity: 1;
   }
 }
+
+@keyframes moveToRight {
+  0% {
+    transform: translateX(-50%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
