--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import "animation.css";
+@import "responsive.css";
 html,
 body {
   margin: 0;
@@ -6,6 +7,7 @@ body {
   background-image: url("../img/bg.jpg");
   background-size: cover;
 }
+
 .aboutme {
   width: 100%;
   height: 100vh;
